# Mosscap

./: .gitignore  .vscodeignore  ArduinoRuntime.cpp  ArduinoRuntime.h  CHANGELOG.md  CMakeLists.txt  Handle.h  MecanumPlant.cpp  MecanumPlant.h  Pose.h  README.md  Simulator.cpp  Simulator.h  SimulatorNew.cpp  SimulatorNew.h  build-core.sh  draw.h  graphics.h  main.cpp  package-lock.json  package.json  tsconfig.json
.github/workflows/: build-extension.yml  build-toolchains.yml  publish.yml
arduino/: ArduinoRuntime.cpp  ArduinoRuntime.h  Constants.h  Encoder.h  Handle.hpp  Motor.h  Sim.h  VL53L0X.h  ardMain.cpp
ardusim/: CHANGELOG.md  README.md  package-lock.json  package.json  tsconfig.json
ardusim/sim-core/include/arduino/: Wire.h
ardusim/sim-core/include/config/: MecanumConfig.h
ardusim/sim-core/include/sim/: MecanumSim.h
ardusim/sim-core/include/util/: graphics.h
ardusim/src/: extension.ts
capability/: Capability.h  ReadableButton.h  ReadableEncoder.h  ReadableTime.h  WriteablePWM.h
config/: MecanumConfig.h  MotorConfig.h  TOFConfig.h
demos/intro/: ardMain.cpp
graphics/: Renderer.cpp  Renderer.h  drawHelpers.h  graphics.h
hardware/: SimButton.cpp  SimButton.h  SimClock.cpp  SimClock.h  SimEncoder.cpp  SimEncoder.h  SimMotor.cpp  SimMotor.h  SimTOF.cpp  SimTOF.h
include/capability/: ReadableTime.h
include/config/: MotorConfig.h  TOFConfig.h
include/hardware/: SimEncoder.h
include/sim/: Simulator.hpp
plant/: MecanumPlant.cpp  MecanumPlant.h  Plant.h
sim/: CMakeLists.txt  MecanumSim.cpp  MecanumSim.h  Simulator.hpp  SimulatorBase.h  SimulatorNew.cpp  SimulatorNew.h  SimulatorNew.hpp  server.py  shell.html
sim-core/include/capability/: Capability.h  DigitallyReadable.h
sim-core/include/sim/: SimulatorBase.h
sim-core/include/util/: Renderer.h
sim/include/: Arduino.h
sim/include/arduino/: ArduinoRuntime.h
sim/include/capability/: ReadableDistance.h  ReadableEncoder.h
sim/include/config/: WMRConfig.h
sim/include/hardware/: SimMotor.h  SimTOF.h
sim/include/mosscap/: defaultTank.h  defaults.h
sim/include/plant/: MecanumPlant.h  Plant.hpp  TankPlant.h
sim/include/sim/: MecanumSim.h  TankSim.h
sim/src/: main.cpp
sim/src/arduino/: ArduinoRuntime.cpp
sim/src/hardware/: SimButton.cpp  SimMotor.cpp
sim/src/plant/: MecanumPlant.cpp  TankPlant.cpp
sim/src/sim/: MecanumSim.cpp  TankSim.cpp
sim/userCode/: Sim.h  ardMain.cpp
src/: compilerManager.ts  extension.ts  main.cpp
src/arduino/: ArduinoRuntime.cpp
src/hardware/: SimClock.cpp  SimEncoder.cpp  SimTOF.cpp
src/plant/: MecanumPlant.cpp
src/sim/: MecanumSim.cpp
src/util/: Renderer.cpp  Telemetry.cpp
userCode/: Controller.h  Drivetrain.h  Sim.h  Trajectory.h  ardMain.cpp
util/: Renderer.cpp  Renderer.h  Telemetry.cpp  Telemetry.h
